# SpiTest

./: CMakeLists.txt  main.cpp
Commands/: HciCommand.cpp  PowerOffPiCommand.cpp  PowerOnPiCommand.cpp
Commands/include/: HciCommand.h  InterfaceCommand.h  PowerOffPiCommand.h  PowerOnPiCommand.h
CommunicationProtocols/SerialProtocol/ISerial/include/: ISerial.h
CommunicationProtocols/SerialProtocol/ISerial/src/: ISerial.cpp
CommunicationProtocols/SerialProtocol/SpiInterface/include/: SpiInterface.h
CommunicationProtocols/SerialProtocol/SpiInterface/src/: SpiInterface.cpp
CommunicationProtocols/SerialProtocol/UartInterface/include/: UartInterface.h
CommunicationProtocols/SerialProtocol/UartInterface/src/: UartInterface.cpp
DataStruct/Include/Buffer/: CyclicBitBuffer.h  CyclicBitBuffer.hpp  CyclicBuffer.h  CyclicBuffer.hpp  IBuffer.h  IBuffer.hpp  ICyclicBuffer.h  ICyclicBuffer.hpp
Hello/include/: Hello.h
Hello/src/: Hello.cpp
Parser/include/: Parser.h
Parser/src/: Parser.cpp
Utils/Singleton/include/: Singleton.h
